# openweathermapSDK

core/: CMakeLists.txt
core/include/: Clouds.h  Coord.h  MainInfo.h  Result.h  Sys.h  ValueWeather.h  Vector2d.h  Weather.h  Wind.h
core/sorce/: Clouds.cpp  Coord.cpp  MainInfo.cpp  Result.cpp  Sys.cpp  ValueWeather.cpp  Vector2d.cpp  Weather.cpp  Wind.cpp
